--- a/index.html
+++ b/index.html
@@ -314,10 +314,10 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Pourquoi <span>Nous</span>
+          Why Choose <span>Us</span>
         </h2>
       </div>
-      <div class="col-md-6">
+      <div class="why_container">
         <div class="box">
           <div class="img-box">
             <img src="images/w1.png" alt="">
@@ -337,16 +337,15 @@
           </div>
           <div class="detail-box">
             <h5>
-               Rapidité Rentablité sécurité 
-            </h5>
-            <p>
-              Grâce au Professionalisme de notre équipe qui commulent des années d'expérience dans le domaine du Transport Urbain , nous vous  mettons 
-              à votre disposition un service de Livraison de qualité à partir de <span> 500 FCFA</span>
-            </p>
+              Rapidité Rentablité sécurité 
+           </h5>
+           <p>
+             Grâce au Professionalisme de notre équipe qui commulent des années d'expérience dans le domain du Transport Urbain , nous  mettons 
+             à votre disposition un service de Livraison de qualité à partir de <span> 500 FCFA</span>
+           </p>
           </div>
         </div>
-        
-        </div>
+       
         <div class="box">
           <div class="img-box">
             <img src="images/w4.png" alt="">
@@ -356,18 +355,19 @@
               Service client 
             </h5>
             <p>
-              Pour des renseignements, réclamations, ou encore des rectifications des 
+              Pour des renseignements, réclamations, ou encore des rectifications des               Pour des renseignements, réclamations, ou encore des rectifications des 
               commandes, notre service client est à votre écoute 6/7 jours  de 8h00 à 17h et le Dimanche de 9h00 à 15h00 pour des livraisons partout dans ville de Douala. Nous cherchons à être au rendez-vous de vos attentes car votre satisfaction est notre priorité.
+
             </p>
           </div>
         </div>
       </div>
       <div class="btn-box">
-        <a href="why.html">
-          Voir plus
+        <a href="">
+          Read More
         </a>
       </div>
-    <!-- </div> -->
+    </div>
   </section>
 
   <!-- end why section -->
