--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="go livraison express" />
+  <meta name="description" content="site de livraison express situé dans la ville de Douala " />
+  <meta name="author" content="Mouliom fitzgerard" />
   <link rel="shortcut icon" href="images/3.png" type="">
 
   <title> GO LIVRAISON EXPRESS </title>
@@ -50,7 +50,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-            GO LiVRAISON EXPRESS
+            GO LIVRAISON EXPRESS
             </span>
           </a>
 
