--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="go livraison express" />
+  <meta name="description" content="site de livraison express situé dans la ville de Douala " />
+  <meta name="author" content="Mouliom fitzgerard" />
   <link rel="shortcut icon" href="images/3.png" type="">
 
   <title> Go livraison Express </title>
