--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <!-- Site Metas -->
   <meta name="keywords" content="go livraison express" />
   <meta name="description" content="site de livraison express situé dans la ville de Douala " />
-  <meta name="author" content="Mouliom fitzgerard" />
+  <meta name="author" content="Mouliom fitzgerald" />
   <link rel="shortcut icon" href="images/3.png" type="">
 
   <title> GO LIVRAISON EXPRESS </title>
