--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-             GO LIVRAISON EXPRESS hello world
+             GO LIVRAISON EXPRESS 
             </span>
           </a>
 
