--- a/index.html
+++ b/index.html
@@ -396,13 +396,15 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Bonamoussadi-Centre commercial Saligny
+                  <!-- Bonamoussadi-Centre commercial Saligny -->
+                  Bonamoussadi Carrefour Km
+
                 </span>
               </a>
               <a href="">
-                <i class="fa-solid fa-hand-holding-dollar"></i>
+                <i class="fa fa-whatsapp" aria-hidden="true"></i>
                 <span>
-                  Call 698 308 698 / 672 308 875
+                  690462556
                 </span>
               </a>
             </div>
