--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="go livraison express" />
   <meta name="description" content="site de livraison express situé dans la ville de Douala " />
   <meta name="author" content="Mouliom fitzgerard" />
-  <link rel="shortcut icon" href="images/3.png" type="">
+  <link rel="shortcut icon" href="images/.png" type="">
 
   <title> Go livraison Express </title>
 
@@ -42,7 +42,7 @@
 
     <div class="hero_bg_box">
       <div class="bg_img_box">
-        <img src="images/hero-bg.png" alt="">
+        <img src="images/hero-b.png" alt="">
       </div>
     </div>
 
