--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="hero_bg_box">
       <div class="bg_img_box">
-        <img src="images/hero-b.png" alt="">
+        <img src="images/hero-bg.png" alt="">
       </div>
     </div>
 
@@ -110,7 +110,7 @@
             </div>
             <div class="col-md-6">
               <div class="img-box">
-                <img src="images/GO Logo-01.png" alt="">
+                <img src="images/GO Logo-0.png" alt="">
               </div>
             </div>
           </div>
