Modification done on site ownership and headers

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <!-- Site Metas -->
-  <meta name="keywords" content="go livraison express" />
-  <meta name="description" content="site de livraison express situé dans la ville de Douala " />
+  <meta name="keywords"
+    content="go livraison express,go livraison,livraison  express, livraison , tricycle,Fitzgerald Mouliom," />
+  <meta name="description"
+    content="Go Livraison Express est votre société de livraison à tricycle situé  dans la ville de Douala " />
   <meta name="author" content="Mouliom fitzgerard" />
   <link rel="shortcut icon" href="images/.png" type="">
 
@@ -461,7 +463,7 @@
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
         <a href="#">
-          <h7>Go Livraison Express</h7>
+          <h7>Fitzgerald Mouliom</h7>
         </a>
       </p>
     </div>
