--- a/service.html
+++ b/service.html
@@ -333,7 +333,16 @@
   </section>
 
   <!-- end info section -->
-
+<section class="footer_section">
+  <div class="container">
+    <p>
+      &copy; <span id="displayYear"></span> All Rights Reserved By
+      <a href="#">
+        <h7>Fitzgerald Mouliom</h7>
+      </a>
+    </p>
+  </div>
+</section>
   <!-- footer section -->
 
   <!-- footer section -->
